--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="black">#F000</color>
     <color name="icEnable">#FFFF</color>
     <color name="icDisable">#4FFF</color>
+    <color name="sittingsFragmentBackground">#6dd6e9</color>
 </resources>
