--- a/app/src/main/res/layout/fragment_drawing_settings.xml
+++ b/app/src/main/res/layout/fragment_drawing_settings.xml
@@ -24,4 +24,21 @@
         app:layout_constraintStart_toEndOf="@+id/iconNumberOfSectors"
         app:layout_constraintTop_toTopOf="@id/iconNumberOfSectors" />
 
+    <com.hembitski.radial.ui.view.IconBrushDiameter
+        android:id="@+id/iconBrushDiameter"
+        android:layout_width="@dimen/drawingSettingIconSize"
+        android:layout_height="@dimen/drawingSettingIconSize"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toStartOf="@id/seekBarNumberOfSectors"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iconNumberOfSectors" />
+
+    <SeekBar
+        android:id="@+id/seekBarBrushDiameter"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/drawingSettingIconSize"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/iconNumberOfSectors"
+        app:layout_constraintTop_toTopOf="@id/iconBrushDiameter" />
+
 </android.support.constraint.ConstraintLayout>
