--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="black">#F000</color>
+    <color name="white">#FFFF</color>
     <color name="icEnable">#FFFF</color>
     <color name="icDisable">#4FFF</color>
     <color name="sittingsFragmentBackground">#6dd6e9</color>
