--- a/app/src/main/res/layout/fragment_drawing_settings.xml
+++ b/app/src/main/res/layout/fragment_drawing_settings.xml
@@ -98,7 +98,7 @@
         android:id="@+id/apply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ok"
+        android:text="@android:string/ok"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
